Modifs page d'accueil

--- a/css/_general.scss
+++ b/css/_general.scss
@@ -323,6 +323,47 @@ end of categories carousel
               height: 100px;
               overflow: hidden;
             }
+            .event_date{
+              background-color: $gray-5;
+              color: $gray-0;
+              padding: 2px 10px;
+              display: inline-block;
+              text-align: center;
+              text-transform: uppercase;
+              font-weight: 700;
+              position: absolute;
+              top: 30px;
+              left: 0;
+              z-index: 2;
+
+              .date{
+                float: left;
+                margin: 0 5px;
+              }
+
+              .day{
+                display: block;
+                border-bottom: solid 2px $gray-0;
+                font-size: 16px;
+              }
+              .month{
+                font-size: 10px;
+              }
+            }
+            $width: 6px;
+            .event_date:before{
+              content: '';
+              display: inline-block;
+              width: $width;
+              height: $width;
+              border: solid $width transparent;
+              border-left: solid $width $gray-2;
+              position: absolute;
+              left: 3px;
+              bottom: -6px;
+              z-index: 1;
+              @include transform(rotate(-45deg));
+            }
           }
         }
         /*end of articles*/
