--- a/css/style.css
+++ b/css/style.css
@@ -241,6 +241,43 @@ end of categories carousel
           color: #666666;
           height: 100px;
           overflow: hidden; }
+        .body .main-body .section.section-slider .section-body .articles a .event_date {
+          background-color: #4d4d4d;
+          color: #f8f8f8;
+          padding: 2px 10px;
+          display: inline-block;
+          text-align: center;
+          text-transform: uppercase;
+          font-weight: 700;
+          position: absolute;
+          top: 30px;
+          left: 0;
+          z-index: 2; }
+          .body .main-body .section.section-slider .section-body .articles a .event_date .date {
+            float: left;
+            margin: 0 5px; }
+          .body .main-body .section.section-slider .section-body .articles a .event_date .day {
+            display: block;
+            border-bottom: solid 2px #f8f8f8;
+            font-size: 16px; }
+          .body .main-body .section.section-slider .section-body .articles a .event_date .month {
+            font-size: 10px; }
+        .body .main-body .section.section-slider .section-body .articles a .event_date:before {
+          content: '';
+          display: inline-block;
+          width: 6px;
+          height: 6px;
+          border: solid 6px transparent;
+          border-left: solid 6px #b9b9b9;
+          position: absolute;
+          left: 3px;
+          bottom: -6px;
+          z-index: 1;
+          -webkit-transform: rotate(-45deg);
+          -moz-transform: rotate(-45deg);
+          -o-transform: rotate(-45deg);
+          -ms-transform: rotate(-45deg);
+          transform: rotate(-45deg); }
     .body .main-body .section.section-slider .section-body .top-category {
       text-align: center; }
       .body .main-body .section.section-slider .section-body .top-category a {
