--- a/css/_general.scss
+++ b/css/_general.scss
@@ -317,6 +317,21 @@ end of categories carousel
               font-weight: 700;
               margin: 5px 0 8px;
             }
+
+            .article_location,
+            .text-right{
+              color: $gray-4;
+              font-size: 13px;
+            }
+            .text-right{
+              font-weight: 700;
+              text-decoration: underline;
+            }
+            .article_location:before{
+              content: '\f041';
+              font-family: "FontAwesome", sans-serif;
+              margin-right: 8px;
+            }
             .article_abstract{
               font-size: 12px;
               color: $gray-4;
