--- a/css/_page-evenements.scss
+++ b/css/_page-evenements.scss
@@ -37,6 +37,7 @@
     border-bottom:  solid 2px $gray-2;
   }
   .event_list{
+
     .article{
       position: relative;
       padding-left: 17px;
@@ -82,6 +83,15 @@
         font-weight: 700;
         font-size: 13px;
       }
+      .article_location,
+      .text-right{
+        color: $gray-4;
+        font-size: 11px;
+      }
+      .text-right{
+        font-weight: 700;
+        text-decoration: underline;
+      }
 
       $width: 13px;
       .event_date:before{
@@ -104,63 +114,97 @@
 .page-banner{
   .section-slider{
     .article{
-      position: relative;
-      padding: 10px 0 10px 17px;
+        position: relative;
+        padding: 10px 0 10px 17px;
 
+        .article_picture_frame{
+          height: 320px;
+          overflow: hidden;
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          margin-bottom: 5px;
+          position: relative;
+
+          .event-data{
+            position: absolute;
+            left: 0;
+            bottom: -100%;
+            width: 100%;
+            height: auto;
+            padding: 15px;
+            background-color: rgba($gray-6, 0.3);
+            @include transition(0.3s);
+
+            .article_location,
+            .article_owner{
+              color: $gray-4;
+              font-size: 13px;
+            }
+            .article_owner{
+              font-weight: 700;
+              text-decoration: underline;
+            }
+            .article_location:before{
+              content: '\f041';
+              font-family: "FontAwesome", sans-serif;
+              margin-right: 8px;
+            }
+          }
+        }
+        .event_date{
+          background-color: $gray-5;
+          color: $gray-0;
+          padding: 2px 10px;
+          display: inline-block;
+          text-align: center;
+          text-transform: uppercase;
+          font-weight: 700;
+          position: absolute;
+          top: 30px;
+          left: 0;
+          z-index: 2;
+
+          .date{
+            float: left;
+            margin: 0 5px;
+          }
+
+          .day{
+            display: block;
+            border-bottom: solid 2px $gray-0;
+            font-size: 16px;
+          }
+          .month{
+            font-size: 10px;
+          }
+        }
+        .article_title{
+          color: $gray-6;
+          font-weight: 700;
+          font-size: 13px;
+        }
+
+        $width: 13px;
+        .event_date:before{
+          content: '';
+          display: inline-block;
+          width: $width;
+          height: $width;
+          border: solid $width transparent;
+          border-left: solid $width $gray-2;
+          position: absolute;
+          left: 5px;
+          bottom: -13px;
+          z-index: 1;
+          @include transform(rotate(-45deg));
+        }
+      }
+    .article:hover{
       .article_picture_frame{
-        height: 320px;
-        overflow: hidden;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        margin-bottom: 5px;
-      }
-      .event_date{
-        background-color: $gray-5;
-        color: $gray-0;
-        padding: 2px 10px;
-        display: inline-block;
-        text-align: center;
-        text-transform: uppercase;
-        font-weight: 700;
-        position: absolute;
-        top: 30px;
-        left: 0;
-        z-index: 2;
-
-        .date{
-          float: left;
-          margin: 0 5px;
+        .event-data{
+          bottom: 0;
         }
-
-        .day{
-          display: block;
-          border-bottom: solid 2px $gray-0;
-          font-size: 16px;
-        }
-        .month{
-          font-size: 10px;
-        }
-      }
-      .article_title{
-        color: $gray-6;
-        font-weight: 700;
-        font-size: 13px;
-      }
-
-      $width: 13px;
-      .event_date:before{
-        content: '';
-        display: inline-block;
-        width: $width;
-        height: $width;
-        border: solid $width transparent;
-        border-left: solid $width $gray-2;
-        position: absolute;
-        left: 5px;
-        bottom: -13px;
-        z-index: 1;
-        @include transform(rotate(-45deg));
       }
     }
   }
