--- a/css/_page-evenements.scss
+++ b/css/_page-evenements.scss
@@ -84,13 +84,12 @@
         font-size: 13px;
       }
       .article_location,
-      .text-right{
+      .annonceur{
         color: $gray-4;
         font-size: 11px;
       }
-      .text-right{
+      .annonceur{
         font-weight: 700;
-        text-decoration: underline;
       }
 
       $width: 13px;
