--- a/css/style.css
+++ b/css/style.css
@@ -157,8 +157,7 @@ end of categories carousel
     .body .main-body .section .section-header {
       position: relative;
       overflow: hidden;
-      margin-bottom: 15px;
-      border-bottom: solid 1px #dfdfdf; }
+      margin-bottom: 15px; }
       .body .main-body .section .section-header .section-title {
         font-weight: 700; }
       .body .main-body .section .section-header .slider-controls {
@@ -335,6 +334,9 @@ end of categories carousel
       font-weight: 700;
       padding: 70px 0;
       font-size: 25px; }
+      .page-banner .container .page-title small {
+        text-transform: none;
+        color: #dfdfdf; }
     .page-banner .container .categorie {
       display: block;
       font-size: 14px;
@@ -766,12 +768,11 @@ footer#main-footer {
     font-weight: 700;
     font-size: 13px; }
   #page-evenements .event_list .article .article_location,
-  #page-evenements .event_list .article .text-right {
+  #page-evenements .event_list .article .annonceur {
     color: #666666;
     font-size: 11px; }
-  #page-evenements .event_list .article .text-right {
-    font-weight: 700;
-    text-decoration: underline; }
+  #page-evenements .event_list .article .annonceur {
+    font-weight: 700; }
   #page-evenements .event_list .article .event_date:before {
     content: '';
     display: inline-block;
