--- a/css/_general.scss
+++ b/css/_general.scss
@@ -318,19 +318,14 @@ end of categories carousel
             }
 
             .article_location,
-            .text-right{
+            .annonceur{
               color: $gray-4;
               font-size: 13px;
             }
-            .text-right{
+            .annonceur{
               font-weight: 700;
-              text-decoration: underline;
             }
-            .article_location:before{
-              content: '\f041';
-              font-family: "FontAwesome", sans-serif;
-              margin-right: 8px;
-            }
+
             .article_abstract{
               font-size: 12px;
               color: $gray-4;
