--- a/css/style.css
+++ b/css/style.css
@@ -236,16 +236,11 @@ end of categories carousel
           font-weight: 700;
           margin: 5px 0 8px; }
         .body .main-body .section.section-slider .section-body .articles a .article_location,
-        .body .main-body .section.section-slider .section-body .articles a .text-right {
+        .body .main-body .section.section-slider .section-body .articles a .annonceur {
           color: #666666;
           font-size: 13px; }
-        .body .main-body .section.section-slider .section-body .articles a .text-right {
-          font-weight: 700;
-          text-decoration: underline; }
-        .body .main-body .section.section-slider .section-body .articles a .article_location:before {
-          content: '\f041';
-          font-family: "FontAwesome", sans-serif;
-          margin-right: 8px; }
+        .body .main-body .section.section-slider .section-body .articles a .annonceur {
+          font-weight: 700; }
         .body .main-body .section.section-slider .section-body .articles a .article_abstract {
           font-size: 12px;
           color: #666666;
