--- a/css/style.css
+++ b/css/style.css
@@ -372,6 +372,43 @@ end of categories carousel
       .pagination .page-list li a:hover {
         background-color: #dfdfdf; }
 
+.video-player {
+  background-color: #333333;
+  text-align: center;
+  padding: 10px 0;
+  position: relative; }
+  .video-player .play-button {
+    position: absolute;
+    display: inline-block;
+    width: 100%;
+    height: 100%;
+    left: 0;
+    top: 0;
+    color: #fff;
+    background-color: rgba(51, 51, 51, 0.4);
+    -webkit-transition: all 0.3s ease-in-out;
+    -moz-transition: all 0.3s ease-in-out;
+    -o-transition: all 0.3s ease-in-out;
+    transition: all 0.3s ease-in-out; }
+  .video-player .play-button:after {
+    content: '\f01d';
+    font-family: "FontAwesome", sans-serif;
+    font-size: 7em;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    -webkit-transform: translate(-50%, -50%);
+    -moz-transform: translate(-50%, -50%);
+    -o-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+    -webkit-transition: all 0.3s ease-in-out;
+    -moz-transition: all 0.3s ease-in-out;
+    -o-transition: all 0.3s ease-in-out;
+    transition: all 0.3s ease-in-out; }
+  .video-player .play-button:hover:after {
+    font-size: 6em; }
+
 #google-map {
   position: relative;
   height: 500px; }
@@ -811,14 +848,9 @@ footer#main-footer {
       .page-banner .section-slider .article .article_picture_frame .event-data .article_location,
       .page-banner .section-slider .article .article_picture_frame .event-data .article_owner {
         color: #666666;
-        font-size: 13px; }
+        font-size: 12px; }
       .page-banner .section-slider .article .article_picture_frame .event-data .article_owner {
-        font-weight: 700;
-        text-decoration: underline; }
-      .page-banner .section-slider .article .article_picture_frame .event-data .article_location:before {
-        content: '\f041';
-        font-family: "FontAwesome", sans-serif;
-        margin-right: 8px; }
+        font-weight: 700; }
   .page-banner .section-slider .article .event_date {
     background-color: #4d4d4d;
     color: #f8f8f8;
