Correction sur la liste simple des widgets

--- a/css/_general.scss
+++ b/css/_general.scss
@@ -500,6 +500,10 @@ end of categories carousel
   text-align: center;
   padding: 10px 0;
   position: relative;
+  overflow: hidden;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 
   .play-button{
     position: absolute;
