--- a/css/style.css
+++ b/css/style.css
@@ -376,7 +376,11 @@ end of categories carousel
   background-color: #333333;
   text-align: center;
   padding: 10px 0;
-  position: relative; }
+  position: relative;
+  overflow: hidden;
+  display: flex;
+  align-items: center;
+  justify-content: center; }
   .video-player .play-button {
     position: absolute;
     display: inline-block;
@@ -636,19 +640,21 @@ header {
           color: #4d4d4d;
           line-height: 13px;
           font-size: 13px; }
-  .sidebar .widget .widget-simple-list .list-item:before {
-    content: '\f105';
-    font-family: "FontAwesome", sans-serif;
-    position: absolute;
-    left: -5px;
-    top: 3px; }
-  .sidebar .widget .widget-simple-list .list-item {
-    margin: 5px 0;
-    position: relative; }
-    .sidebar .widget .widget-simple-list .list-item a {
-      display: block;
-      padding: 5px;
-      color: #4d4d4d; }
+  .sidebar .widget .widget-simple-list {
+    padding-left: 10px; }
+    .sidebar .widget .widget-simple-list .list-item:before {
+      content: '\f105';
+      font-family: "FontAwesome", sans-serif;
+      position: absolute;
+      left: -5px;
+      top: 3px; }
+    .sidebar .widget .widget-simple-list .list-item {
+      margin: 2px 0;
+      position: relative; }
+      .sidebar .widget .widget-simple-list .list-item a {
+        display: block;
+        padding: 2px 5px;
+        color: #4d4d4d; }
   .sidebar .widget select {
     display: block;
     width: 100%;
