Aout du nom de l'organisateur sur la page événement

--- a/css/_responsive.scss
+++ b/css/_responsive.scss
@@ -303,6 +303,15 @@
       }
     }
   }
+  .page-banner{
+    .container{
+      .page-title{
+        small{
+          display: block;
+        }
+      }
+    }
+  }
 }
 
 @media (max-width: 640px){
