--- a/css/_general.scss
+++ b/css/_general.scss
@@ -27,6 +27,9 @@ body {
 a:hover, a:focus{
   text-decoration: none !important;
 }
+a{
+  color: $gray-6;
+}
 *, *:focus, *:active{
   outline: none !important;
 }
