--- a/css/style.css
+++ b/css/style.css
@@ -225,7 +225,7 @@ end of categories carousel
         position: relative;
         width: 50%;
         padding: 0 1%;
-        margin-bottom: 15px; }
+        margin-bottom: 30px; }
         .body .main-body .section.section-slider .section-body .articles a .article_picture_frame {
           position: relative;
           width: 100%;
@@ -236,8 +236,7 @@ end of categories carousel
           align-items: center; }
         .body .main-body .section.section-slider .section-body .articles a .article_title {
           color: #333333;
-          font-weight: 700;
-          margin: 5px 0 8px; }
+          font-weight: 700; }
         .body .main-body .section.section-slider .section-body .articles a .article_location,
         .body .main-body .section.section-slider .section-body .articles a .annonceur {
           color: #666666;
