--- a/css/_general.scss
+++ b/css/_general.scss
@@ -317,6 +317,7 @@ end of categories carousel
             .article_title{
               color: $gray-6;
               font-weight: 700;
+              margin-top: 5px;
             }
 
             .article_location,
