Ajout de la page login

--- a/css/_general.scss
+++ b/css/_general.scss
@@ -550,3 +550,7 @@ end of categories carousel
     text-align: center;
   }
 }
+.bg-cover{
+  background-size: cover;
+  background-position: center center;
+}
