--- a/css/style.css
+++ b/css/style.css
@@ -16,7 +16,7 @@ select {
 body {
   position: relative;
   margin: 0;
-  padding-bottom: 6rem;
+  padding-bottom: 5rem;
   min-height: 100%;
   font-family: "Roboto", sans-serif;
   background-color: #f8f8f8; }
@@ -434,6 +434,19 @@ end of categories carousel
 .bg-cover {
   background-size: cover;
   background-position: center center; }
+
+.page-404 .container {
+  min-height: 80vh;
+  height: 100%;
+  display: flex;
+  align-items: center; }
+  .page-404 .container .content {
+    width: 70%; }
+  .page-404 .container .h1 {
+    font-size: 10em;
+    font-weight: 700; }
+  .page-404 .container .h3 {
+    font-size: 18px; }
 
 #google-map {
   position: relative;
@@ -1102,9 +1115,12 @@ footer#main-footer {
   .login-page .page-title {
     margin-bottom: 30px; }
   .login-page .col-md-3 {
-    padding: 40px 15px 100px; }
+    padding: 40px 15px 100px;
+    color: #333333; }
   .login-page .col-md-9 {
-    padding: 40px 15px; }
+    padding: 40px 15px 20px; }
+  .login-page .welcome-message {
+    font-size: 13px; }
   .login-page .registration-form {
     border-right: solid 2px #dfdfdf;
     position: relative; }
