--- a/css/_general.scss
+++ b/css/_general.scss
@@ -18,7 +18,7 @@ select{
 body {
   position: relative;
   margin: 0;
-  padding-bottom: 6rem;
+  padding-bottom: 5rem;
   min-height: 100%;
   font-family: $roboto;
   background-color: $gray-0;
@@ -553,4 +553,24 @@ end of categories carousel
 .bg-cover{
   background-size: cover;
   background-position: center center;
+}
+
+.page-404{
+  .container{
+    min-height: 80vh;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    .content{
+      width: 70%;
+    }
+
+    .h1{
+      font-size: 10em;
+      font-weight: 700;
+    }
+    .h3{
+      font-size: 18px;
+    }
+  }
 }
