--- a/css/_page-etablissement.scss
+++ b/css/_page-etablissement.scss
@@ -94,6 +94,12 @@
         margin: 0 2px 5px 0;
         border-radius: 2px;
         border: solid 1px $gray-3;
+        cursor: pointer;
+        @include transition(0.3s);
+      }
+      li:hover{
+        background-color: $gray-4;
+        color: #fff;
       }
     }
 
