--- a/css/style.css
+++ b/css/style.css
@@ -1034,7 +1034,15 @@ footer#main-footer {
     padding: 2px 10px;
     margin: 0 2px 5px 0;
     border-radius: 2px;
-    border: solid 1px #868686; }
+    border: solid 1px #868686;
+    cursor: pointer;
+    -webkit-transition: all 0.3s ease-in-out;
+    -moz-transition: all 0.3s ease-in-out;
+    -o-transition: all 0.3s ease-in-out;
+    transition: all 0.3s ease-in-out; }
+  .page-etablissement .section ul.tags li:hover {
+    background-color: #666666;
+    color: #fff; }
 .page-etablissement .section ul.horaires {
   font-size: 12px; }
   .page-etablissement .section ul.horaires .jour {
@@ -1420,7 +1428,12 @@ footer#main-footer {
         margin-bottom: 8px; }
       .login-page form .form_input::-webkit-input-placeholder {
         color: #4d4d4d;
-        font-weight: 700; } }
+        font-weight: 700; }
+
+  .page-404 .container .content {
+    width: 100%; }
+  .page-404 .container .h1 {
+    font-size: 10em; } }
 @media (max-width: 640px) {
   .body .main-body .section.section-slider .section-body .articles {
     display: block; }
