--- a/css/_responsive.scss
+++ b/css/_responsive.scss
@@ -380,6 +380,201 @@
       }
     }
   }
+  .page-etablissement{
+    .social-sharing{
+      overflow: hidden;
+      ul{
+        list-style: none;
+        overflow: hidden;
+        float: left;
+
+        li{
+          float: left;
+          margin: 5px;
+
+          a{
+            color: $gray-5;
+            display: block;
+            width: 35px;
+            padding: 10px 0;
+            text-align: center;
+            background-color: $gray-1;
+            border-radius: 100%;
+            @include transition(0.3s);
+          }
+          a:hover{
+            background-color: $gray-3;
+            color: #fff;
+          }
+        }
+      }
+      .incdicateur_ouverture{
+        float: right;
+        padding: 5px 15px;
+        border: solid 1px $gray-6;
+        color: $gray-6;
+        text-transform: uppercase;
+        border-radius: 2px;
+      }
+    }
+    .section{
+      .logo_etablissement{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+        height: 225px;
+        overflow: hidden;
+      }
+      .sub-section-title{
+        font-weight: 700;
+        color: $gray-5;
+        margin-bottom: 10px;
+      }
+      p{
+        font-size: 13px;
+      }
+      ul.contact{
+        font-size: 13px;
+        margin: 0;
+        padding: 0;
+        list-style: none;
+
+        li{
+          margin: 5px 0;
+        }
+
+        li:before{
+          font-family: "FontAwesome", sans-serif;
+          color: $gray-5;
+          display: inline-block;
+          width: 20px;
+          text-align: center;
+          margin-right: 15px;
+        }
+        li.telephone:before{  content: '\f095';  }
+        li.email:before{  content: '\f1fa';  }
+        li.website:before{  content: '\f0ac';  }
+        li.facebook:before{  content: '\f09a';  }
+        li.linkedin:before{  content: '\f0e1';  }
+        li.twitter:before{  content: '\f099';  }
+        li.instagram:before{  content: '\f16d';  }
+      }
+
+      ul.tags{
+        list-style: none;
+        font-size: 11px;
+        li{
+          display: inline-block;
+          vertical-align: top;
+          padding: 2px 10px;
+          margin: 0 2px 5px 0;
+          border-radius: 2px;
+          border: solid 1px $gray-3;
+          cursor: pointer;
+          @include transition(0.3s);
+        }
+        li:hover{
+          background-color: $gray-4;
+          color: #fff;
+        }
+      }
+
+      ul.horaires{
+        font-size: 12px;
+
+        .jour{
+          display: inline-block;
+          width: 100px;
+        }
+      }
+
+      ul.paiements{
+        font-size: 12px;
+        li{
+          display: inline-block;
+          text-align: center;
+          margin: 0 15px 5px 0;
+        }
+      }
+    }
+    .event_list{
+      .article{
+        position: relative;
+        padding-left: 17px;
+        padding-bottom: 30px;
+
+        .article_picture_frame{
+          height: 225px;
+          overflow: hidden;
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          margin-bottom: 5px;
+        }
+        .event_date{
+          background-color: $gray-5;
+          color: $gray-0;
+          padding: 2px 10px;
+          display: inline-block;
+          text-align: center;
+          text-transform: uppercase;
+          font-weight: 700;
+          position: absolute;
+          top: 15px;
+          left: 0;
+          z-index: 2;
+
+          .date{
+            float: left;
+            margin: 0 5px;
+          }
+
+          .day{
+            display: block;
+            border-bottom: solid 2px $gray-0;
+            font-size: 16px;
+          }
+          .month{
+            font-size: 10px;
+          }
+        }
+        .article_title{
+          color: $gray-6;
+          font-weight: 700;
+          font-size: 13px;
+        }
+        .article_location,
+        .annonceur{
+          color: $gray-4;
+          font-size: 13px;
+        }
+        .annonceur{
+          font-weight: 700;
+        }
+
+        $width: 13px;
+        .event_date:before{
+          content: '';
+          display: inline-block;
+          width: $width;
+          height: $width;
+          border: solid $width transparent;
+          border-left: solid $width $gray-2;
+          position: absolute;
+          left: 5px;
+          bottom: -13px;
+          z-index: 1;
+          @include transform(rotate(-45deg));
+        }
+      }
+    }
+    .liste-etablissements{
+      .col-sm-4{
+        padding-left: 15px;
+      }
+    }
+  }
 }
 
 @media (max-width: 640px){
